@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-06T01:07:47Z",
+  "timestamp" : "2025-05-06T12:29:22Z",
   "count_outdated" : 4836,
   "uniques_outdated" : 2546,
-  "count" : 4879,
-  "uniques" : 2579,
+  "count" : 4881,
+  "uniques" : 2581,
   "clones" : [
     {
       "timestamp": "2025-04-23T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ],
       "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2025-05-06T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
