@@ -1,6 +1,6 @@
 {
-  "count": 43,
-  "uniques": 19,
+  "count": 45,
+  "uniques": 20,
   "clones": [
     {
       "timestamp": "2025-04-23T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2025-05-05T00:00:00Z",
       "count": 8,
       "uniques": 6
+    },
+    {
+      "timestamp": "2025-05-06T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
